fixed non-number input on amound and fixed small sized add&delete on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,10 +28,9 @@ nav {
 .popup {
     margin: auto;
     margin-top: 6%;
-    width: 60%;
     padding: 0.1rem 1.5rem 1.5rem 1.5rem;
     padding-bottom: 4rem;
-    max-width: 40%;
+    max-width: 600px;
 }
 
 .pl-3rem {
